<resources>
    <string name="app_name">The Movie Database</string>
    <string name="cover_description">Image of movie</string>
    <string name="thriller">боевики</string>
    <string name="drama">драмы</string>
    <string name="comedy">комедии</string>
    <string name="art_house">артхаус</string>
    <string name="melodrama">мелодрамы</string>
    <string name="date">22.04.2021</string>
    <string name="ageRating">18+</string>
    <string name="movie_name">Гнев человеческий</string>
    <string name="rating_description">Movie rating</string>
    <string name="movie_description">Эйч — загадочный и холодный на вид джентльмен, но внутри него пылает жажда справедливости. Преследуя свои мотивы, он внедряется в инкассаторскую компанию, чтобы выйти на соучастников серии многомиллионных ограблений, потрясших Лос-Анджелес. В этой запутанной игре у каждого своя роль, но под подозрением оказываются все. Виновных же обязательно постигнет гнев человеческий.</string>

    <string name="actors">Актёры</string>

    <string name="interests">Интересы</string>
    <string name="personal_data">Личные данных</string>
    <string name="settings">Настройки</string>
    <string name="app">Приложение</string>

    <string name="actor3">Джош Харнетт</string>
    <string name="actor2">Холт Маккэллани</string>
    <string name="actor1">Джейсон Стэйтем</string>
    <string name="card_of_an_actor">Card of an actor</string>
    <string name="go_home">Go home</string>
    <string name="go_to_account">Go to account</string>
    <string name="popular_now">Популярное сейчас</string>
    <string name="search_description">Search for movies</string>
    <string name="main_age_restriction_text">%1$d+</string>
    <string name="main_click_message">Название: %1$s</string>
    <string name="genre_click_message">Жанр: %1$s</string>
    <string name="main_empty_message">Тут должен был быть текст</string>
    <string name="emptyMovieList">Сейчас здесь нет фильмов, но мы уже отправили режиссёра снимать фильм для вас</string>
    <string name="coming_soon">Скоро в кино</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>


    <string name="unwatched">Непросмотренное</string>
    <string name="recommended">Рекомендуемое</string>
    <string name="account_name">Михаил</string>
    <string name="account_mail">grigorevmp@gmail.com</string>
    <string name="name_hint">Имя</string>
    <string name="e_mail_hint">E-mail</string>
    <string name="phone_hint">Телефон</string>
    <string name="password_hint">Пароль</string>

    <string name="notification_sound">Уведомления и звуки</string>
    <string name="confidential">Конфиденциальность</string>
    <string name="theme">Тема</string>
    <string name="lang">Язык</string>
    <string name="data_memory">Данные и память</string>

    <string name="ask_question">Задать вопрос</string>
    <string name="bug_report">Сообщить о проблема</string>

    <string name="exit">Выход</string>
    <string name="please_wait">Please wait</string>
    <string name="welcome">Добро пожаловать!</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="enter">Вход</string>


</resources>