<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@id/movieCover"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/cover_gnev"
        android:adjustViewBounds="true"

        android:contentDescription="@string/cover_description" />

    <View
        android:id="@id/movieCard"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/card_top_margin"
        android:background="@drawable/movie_card_shape"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical">
    </View>

    <TextView
        android:id="@id/genre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/left_margin_value"
        android:layout_marginTop="@dimen/genre_top_margin"
        android:background="@drawable/tag"
        android:paddingStart="@dimen/genre_horizontal_margin"
        android:paddingTop="@dimen/genre_vertical_margin"
        android:paddingEnd="@dimen/genre_horizontal_margin"
        android:paddingBottom="@dimen/genre_vertical_margin"
        android:text="@string/genre"
        android:textColor="@color/black"
        android:textSize="@dimen/genre_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/movieCard"
        tools:ignore="SmallSp" />

    <TextView
        android:id="@id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/date_right_margin"
        android:layout_marginTop="@dimen/date_top_margin"
        android:text="@string/date"
        android:textColor="@color/black"
        android:textSize="@dimen/date_size"
        app:layout_constraintStart_toEndOf="@+id/genre"
        app:layout_constraintTop_toTopOf="@+id/movieCard" />

    <TextView
        android:id="@id/ageRating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/age_top_margin"
        android:layout_marginEnd="@dimen/left_margin_value"
        android:background="@drawable/age_rating"
        android:paddingStart="@dimen/genre_start_text"
        android:paddingTop="@dimen/genre_top_text"
        android:paddingEnd="@dimen/genre_end_text"
        android:text="@string/ageRating"
        android:textColor="@color/black"
        android:textSize="@dimen/age_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/movieCard" />

        <TextView
            android:id="@id/movieName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/left_margin_value"
            android:layout_marginTop="@dimen/small_top_margin"
            android:text="@string/movie_name"
            android:textColor="@color/black"
            android:textSize="@dimen/movie_name_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/date" />

        <LinearLayout
            android:id="@id/starsGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/left_margin_value"
            android:layout_marginTop="@dimen/rating_top_margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/movieName">

            <ImageView
                android:id="@id/star1"
                android:layout_width="@dimen/star_width"
                android:layout_height="@dimen/star_height"
                android:backgroundTint="@color/black"
                android:contentDescription="@string/rating_description"
                android:src="@drawable/ic_favorite_full"
                app:tint="@color/black" />

            <ImageView
                android:id="@id/star2"
                android:layout_width="@dimen/star_width"
                android:layout_height="@dimen/star_height"
                android:backgroundTint="@color/black"
                android:contentDescription="@string/rating_description"
                android:src="@drawable/ic_favorite_full"
                app:tint="@color/black" />

            <ImageView
                android:id="@id/star3"
                android:layout_width="@dimen/star_width"
                android:layout_height="@dimen/star_height"
                android:backgroundTint="@color/black"
                android:contentDescription="@string/rating_description"
                android:src="@drawable/ic_favorite_full"
                app:tint="@color/black" />

            <ImageView
                android:id="@id/star4"
                android:layout_width="@dimen/star_width"
                android:layout_height="@dimen/star_height"
                android:backgroundTint="@color/black"
                android:contentDescription="@string/rating_description"
                android:src="@drawable/ic_favorite_full"
                app:tint="@color/black" />

            <ImageView
                android:id="@id/star5"
                android:layout_width="@dimen/star_width"
                android:layout_height="@dimen/star_height"
                android:backgroundTint="@color/black"
                android:contentDescription="@string/rating_description"
                android:src="@drawable/ic_favorite"
                app:tint="@color/black" />

        </LinearLayout>

        <TextView
            android:id="@id/movie_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/left_margin_value"
            android:layout_marginTop="@dimen/description_top_margin"
            android:layout_marginEnd="@dimen/description_right_margin"
            android:text="@string/movie_description"
            android:textColor="@color/black"
            android:textSize="@dimen/movie_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/starsGroup" />

        <TextView
            android:id="@id/actors"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/actors"
            android:textColor="@color/black"
            android:textSize="@dimen/sub_head_size"
            android:layout_marginTop="@dimen/date_top_margin"
            android:layout_marginStart="@dimen/left_margin_value"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/movie_description" />


        <ImageView
            android:id="@id/actor_card1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/actors"
            android:layout_marginStart="@dimen/left_margin_value"
            android:layout_marginTop="@dimen/small_top_margin"
            android:src="@drawable/steitem"
            android:contentDescription="@string/card_of_an_actor" />

        <TextView
            android:id="@id/actor_name1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/extra_small_top_margin"
            android:text="@string/actor1"
            android:textColor="@color/black"
            android:textSize="@dimen/actor_name_size"
            app:layout_constraintStart_toStartOf="@id/actor_card1"
            app:layout_constraintTop_toBottomOf="@id/actor_card1"
            />

        <ImageView
            android:id="@id/actor_card2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/actors_distance"
            android:layout_marginTop="@dimen/small_top_margin"
            android:src="@drawable/makkellani"
            app:layout_constraintStart_toEndOf="@+id/actor_card1"
            app:layout_constraintTop_toBottomOf="@id/actors"
            android:contentDescription="@string/card_of_an_actor"  />

        <TextView
            android:id="@id/actor_name2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/extra_small_top_margin"
            android:text="@string/actor2"
            android:textColor="@color/black"
            android:textSize="@dimen/actor_name_size"
            app:layout_constraintStart_toStartOf="@+id/actor_card2"
            app:layout_constraintTop_toBottomOf="@id/actor_card2" />

        <ImageView
            android:id="@id/actor_card3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@+id/actor_card2"
            app:layout_constraintTop_toBottomOf="@id/actors"
            android:layout_marginStart="@dimen/actors_distance"
            android:layout_marginTop="@dimen/small_top_margin"
            android:src="@drawable/harnett"
            android:contentDescription="@string/card_of_an_actor"
            />

        <TextView
            android:id="@id/actor_name3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/extra_small_top_margin"
            android:text="@string/actor1"
            android:textColor="@color/black"
            android:textSize="@dimen/actor_name_size"
            app:layout_constraintStart_toStartOf="@+id/actor_card3"
            app:layout_constraintTop_toBottomOf="@id/actor_card3"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>


